@@ -8,17 +8,18 @@
     
 		<p>
     The CPAN Testers Family: <br />
-      <a href="http://blog.cpantesters.org">Blog</a>          &#8226;
-      <a href="http://www.cpantesters.org">Reports</a>        &#8226;
-      <a href="http://wiki.cpantesters.org">Wiki</a>          &#8226;
-      <a href="http://stats.cpantesters.org">Statistics</a>   &#8226;
-      <a href="http://pass.cpantesters.org">PASS Matrix</a>   &#8226;
-      <a href="http://prefs.cpantesters.org">Preferences</a>  &#8226;
-      <a href="http://metabase.cpantesters.org">Metabase</a>  &#8226;
-      <a href="http://devel.cpantesters.org">Development</a>  &#8226;
-      <a href="http://deps.cpantesters.org">Dependencies</a>  &#8226;
-      <a href="http://matrix.cpantesters.org">Matrix</a>      &#8226;
-      <a href="http://analysis.cpantesters.org">Analysis</a>
+      <a href="http://blog.cpantesters.org"     title="CPAN Testers Blog"       >Blog</a>         &#8226;
+      <a href="http://www.cpantesters.org"      title="CPAN Testers Reports"    >Reports</a>      &#8226;
+      <a href="http://wiki.cpantesters.org"     title="CPAN Testers Wiki"       >Wiki</a>         &#8226;
+      <a href="http://stats.cpantesters.org"    title="CPAN Testers Statistics" >Statistics</a>   &#8226;
+      <a href="http://pass.cpantesters.org"     title="CPAN Testers PASS Matrix">PASS Matrix</a>  &#8226;
+      <a href="http://prefs.cpantesters.org"    title="CPAN Testers Preferences">Preferences</a>  &#8226;
+      <a href="http://metabase.cpantesters.org" title="CPAN Testers Metabase"   >Metabase</a>     &#8226;
+      <a href="http://devel.cpantesters.org"    title="CPAN Testers Development">Development</a>  &#8226;
+      <a href="http://deps.cpantesters.org"     title="CPAN Dependencies"       >Dependencies</a> &#8226;
+      <a href="http://matrix.cpantesters.org"   title="CPAN Testers Matrix"     >Matrix</a>       &#8226;
+      <a href="http://analysis.cpantesters.org" title="CPAN Testers Analysis"   >Analysis</a>     &#8226;
+      <a href="http://admin.cpantesters.org"    title="CPAN Testers Admin"      >Admin</a>
 	  </p>
 
     <p>
