@@ -4,6 +4,7 @@ Changes for the CPAN Testers Preferences website
         - final fix for PAUSE authentication.
         - upgrade to Labyrinth-5.24.
         - upgrade to Labyrinth-Plugin-Core-5.19.
+        - added Admin site links.
 
 0.18    2014-09-22
         - fixed license fields in META.json to be lists.
